# binary_search

./: .pre-commit-config.yaml  pyproject.toml
binary_search/easy/: anagram_checks.py  ancient_astronaut_theory.py  buying_cars.py  check_palindrome.py  collatz_sequence.py  common_words.py  complete_an_arithmetic_sequence.py  consecutive_duplicates.py  generate_primes.py  greatest_common_divisor.py  group_integers.py  largest_number_by_two_times.py  list_min_replacement.py  longest_consecutive_duplicate_string.py  mixed_sorting.py  nth_fibonacci_number.py  number_of_bits.py  palindromic_number.py  pascals_triangle.py  prime_factorization.py  pythagorean_triplets.py  range_query_on_a_list.py  remove_last_duplicate_entries.py  repeated_addition.py  roomba.py  rotate_list_left_by_k.py  run_length_decoded_iterator.py  shortest_string.py  smallest_pair_sum_with_distance_constraint.py  split_list.py  target_number_with_operations.py  three_six_nine.py  win_after_last_round.py  wolf_of_wall_street.py
tests/: test_binary_search.py
tests/easy/: test_anagram_checks.py  test_ancient_astronaut_theory.py  test_buying_cars.py  test_check_palindrome.py  test_collatz_sequence.py  test_common_words.py  test_complete_an_arithmetic_sequence.py  test_consecutive_duplicates.py  test_generate_primes.py  test_greatest_common_divisor.py  test_group_integers.py  test_largest_number_by_two_times.py  test_list_min_replacement.py  test_longest_consecutive_duplicate_string.py  test_mixed_sorting.py  test_nth_fibonacci_number.py  test_number_of_bits.py  test_palindromic_number.py  test_roomba.py  (+14 more)
