[tool.poetry]
name = "binary_search"
version = "0.1.0"
description = ""
authors = ["Jaime Abbariao <jaimeabbariao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
neovim = "^0.3.1"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
